--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -108,12 +108,12 @@ a,a:hover {
 }
 
 .navbar-toggle {
-  color:#fff;
+  color:rgb(22, 25, 230);
   border-width:0;
 }
 
 .navbar-toggle:hover {
-  background-color:#fff;
+  background-color:rgb(233, 19, 19);
 }
 
 .panel {
