--- a/src/views/signin.ejs
+++ b/src/views/signin.ejs
@@ -27,9 +27,10 @@
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
-        <%for(let i=0; i<nav.length; i++){%>
-          <li>
-            <a href="<%=nav[i].link%>"><%=nav[i].title%></a>
+        <%for(let i=0; i<nav.length; i++) {%>
+        <li>
+          <a href="<%=nav[i].link%>"><%=nav[i].title%></a>
+        </li>
         <%}%>
       </ul>
       <ul class="nav navbar-right navbar-nav">
@@ -50,7 +51,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-7">
-        <h1><%=title %>
+        <h1><%=title%>
           <p class="lead"></p>
         </h1>
       </div>
@@ -86,32 +87,22 @@
       <div class="panel">
         <div class="panel-body">
           
-        
+          
+          
+          <!--/stories-->
           <div class="row">    
             <br>
             <div class="col-md-2 col-sm-3 text-center">
-              <a class="story-title" href="#">
-              <img alt="" src="<%=book.details.image_url%>" style="width:100px;height:100px" class="img-circle"></a>
-            </div>
-            <div class="col-md-10 col-sm-9">
-              <h3><%=book.title%></h3>
-              <div class="row">
-                <div class="col-xs-9">
-                  <h4><span class="label label-default"><%=book.author%></span></h4><h4>
-                  <small style="font-family:courier,'new courier';" class="text-muted">2 hours ago  •
-                   
-                  </h4></div>
-                <div class="col-xs-3"></div>
-              </div>
-              <br><%-book.details.description%><br>
+              Sign In!
+              <form name="signInForm" action="/auth/signin" method="post">
+                UserName: <input name="username" id="username"/><br/>
+                Password: <input name="password" id="password"/><br/>
+                <input type="submit" value="Sign in" />
+              </form>
             </div>
           </div>
           <hr>
-         
-                
           
-          <a href="/" class="btn btn-primary pull-right btnNext">More <i class="glyphicon glyphicon-chevron-right"></i></a>
-        
           
         </div>
       </div>
